[package]

# Basic Info
name = "chickenwire"
version = "0.1.0"
authors = [
    "smith7 <smith7@uchicago.edu>",
]
edition = "2018"
documentation = ""
publish = [
    "crates.io",
]

# Metadata
description = "A library for representing and manipulating hexagonal grids."
license = "Apache-2.0/MIT"
repository = "https://github.com/cmarcbs7/chickenwire"
categories = [
    "",
]
keywords = [
    "",
]

[dependencies]
petgraph = "0.4.13"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "cribench_coordinate"
harness = false
